# offline-license-engine

./: .gitignore  AGENTS.md  README.md  codex.patch  main.py  pyproject.toml
app/: concurrency.py  licensing.py  machine_id.py
docs/: App 离线授权系统设计与开发说明书 V1.0.docx  USAGE_HELP.md
examples/: README.md
gui/: about_dialog.py  license_dialog.py
src/ole/: __init__.py
src/ole/cli/: main.py
src/ole/core/: device_fingerprint.py
tests/: test_cli.py  test_version.py
tools/: batch_issue_from_requests.py  gen_keys.py  make_device_request.py
