[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offline-license-engine"
version = "0.1.0"
description = "Offline-first licensing engine for packaged desktop applications."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
ole = "ole.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
